--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #fff;
-  color: #333;
+  color: white;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -22,7 +22,7 @@ a {
   color: #000;
 
   &:visited {
-    color: #666;
+    color: white;
   }
 
   &:hover {
