--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,17 +15,18 @@
     <ul id="menu">
       <li class="active"><a class="icon-home" href="#accueil">Home</a></li>
               <li><a class="icon-group" href="#quisommesnous">About Us</a></li>
-              <li><a class="icon-leaf" href="#services">Services</a></li>
               <% if logged_in? %>
-              <li><a class="icon-picture" href="#">
-              <%= link_to "History", '#' %></a></li>
-              <li><a class="icon-envelope-alt" href="#">
-               <%= link_to "Logout", logout_path, method: :delete %></a></li>
+              <li>
+              <%= link_to "Play Quiz", play_quiz_path, class:'icon-envelope-alt' %></li>
+              <li>
+              <%= link_to "History", '#', class:'icon-envelope-alt' %></li>
+              <li>
+               <%= link_to "Logout", logout_path, method: :delete, class: 'icon-envelope-alt' %></li>
                <% else %>
-               <li><class="icon-envelope-alt">
-               <%= link_to "Login", login_path %></li>
-               <li><class="icon-envelope-alt">
-               <%= link_to "SignUp", signup_path %></li>
+               <li>
+               <%= link_to "Login", login_path, class:'icon-envelope-alt' %></li>
+               <li>
+               <%= link_to "SignUp", signup_path, class:'icon-envelope-alt' %></li>
              <% end %>
           </ul>
       </nav>
