--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class='main'>
 
 <h1>Genres</h1>
 
@@ -25,3 +26,4 @@
 <br>
 
 <%= link_to 'New Genre', new_genre_path %>
+</div>
