--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<div class='main'>
+
 <h1>Questions</h1>
 
 <table>
@@ -39,3 +41,4 @@
 <br>
 
 <%= link_to 'New Question', new_question_path %>
+</div>
