--- a/app/views/subgenres/edit.html.erb
+++ b/app/views/subgenres/edit.html.erb
@@ -1,6 +1,9 @@
+<div class='main'>
+
 <h1>Editing Subgenre</h1>
 
 <%= render 'form', subgenre: @subgenre %>
 
 <%= link_to 'Show', @subgenre %> |
 <%= link_to 'Back', subgenres_path %>
+</div>
