--- a/app/views/subgenres/index.html.erb
+++ b/app/views/subgenres/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class='main'>
 
 <h1>Subgenres</h1>
 
@@ -27,3 +28,4 @@
 <br>
 
 <%= link_to 'New Subgenre', new_subgenre_path %>
+</div>
