--- a/app/views/subgenres/new.html.erb
+++ b/app/views/subgenres/new.html.erb
@@ -1,5 +1,8 @@
+<div class='main'>
+
 <h1>New Subgenre</h1>
 
 <%= render 'form', subgenre: @subgenre %>
 
 <%= link_to 'Back', subgenres_path %>
+</div>
