--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,53 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.link_box{
+    height: 50px;
+    background-color: #689384;
+    width: 80%;
+    border-radius: 5px;
+    margin-top: 80px;
+    text-align: center;
+    margin-left: 120px;
+    font-size: 20px;
+}
+
+.option_box{
+    height: 40px;
+    background-color: #689384;
+    width: 80%;
+    border-radius: 5px;
+    margin-top: 80px;
+    text-align: center;
+    margin-left: 120px;
+    font-size: 20px;
+    
+}
+
+.options{
+    text-decoration: none;
+    font-size: 30px;
+    line-height: 40px;
+    text-transform: uppercase;
+    
+}
+
+.links{
+    text-decoration: none;
+    font-size: 30px;
+    line-height: 40px;
+    text-transform: uppercase;
+    
+}
+.links:hover {
+    color: #4d0000;
+    font-size: 35px;
+}
+
+.title{
+    color: #689384;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 50px;
+}
