--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,7 +12,7 @@ body {
   padding: 0;
   background: #DDD;
   font-size: 16px;
-  color: white;
+  color: #222;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
 }
