--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,6 +1,9 @@
+<div class='main'>
+
 <h1>Editing Genre</h1>
 
 <%= render 'form', genre: @genre %>
 
 <%= link_to 'Show', @genre %> |
 <%= link_to 'Back', genres_path %>
+</div>
