--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<div class='main'>
+
 <p>
   <strong>Name:</strong>
   <%= @genre.name %>
@@ -17,3 +19,4 @@
 
 <%= link_to 'Edit', edit_genre_path(@genre) %> |
 <%= link_to 'Back', genres_path %>
+</div>
