--- a/app/views/pages/show_questions.html.erb
+++ b/app/views/pages/show_questions.html.erb
@@ -1,4 +1,5 @@
 <% if logged_in? %>
+    <h1 class='title'>Play Quiz</h1>
     <% if !play_in? %>
         <% quiz = Quiz.new(userId: @current_user.id, genreId: @genre_id, subgenreId: @subgenre_id, score: 0, status: 'play', current: 0) %>
         <% quiz.save %>
@@ -6,21 +7,33 @@
         <% current_quiz %>
     <% end %>
 
-    <%= @i %>
-    <%= session[:quiz_id] %>
 
 <%= form_for(:page, url: result_path) do |f| %>    
-    <%= @questions[@i].text %><br />
-    <%= radio_button_tag :option, @questions[@i].option1, :checked => true %> <%= @questions[@i].option1 %><br />
-    <%= radio_button_tag :option, @questions[@i].option2 %> <%= @questions[@i].option2 %><br />
-    <%= radio_button_tag :option, @questions[@i].option3 %> <%= @questions[@i].option3 %><br />
-    <%= radio_button_tag :option, @questions[@i].option4 %> <%= @questions[@i].option4 %><br />
+    <div class='link_box' ><%= @questions[@i].text.html_safe %></div>
+    <table width='70%' style='margin-left:110px' >
+    <tr>
+    <td>
+    <div class='option_box' ><%= radio_button_tag :option, @questions[@i].option1, :checked => true %> <%= @questions[@i].option1 %></div>
+    </td>
+    <td>
+    <div class='option_box' ><%= radio_button_tag :option, @questions[@i].option2 %> <%= @questions[@i].option2 %></div>
+    </td>
+    </tr>
+    <tr>
+    <td>
+    <div class='option_box' ><%= radio_button_tag :option, @questions[@i].option3 %> <%= @questions[@i].option3 %></div>
+    </td>
+    <td>
+    <div class='option_box' ><%= radio_button_tag :option, @questions[@i].option4 %> <%= @questions[@i].option4 %></div>
+    
+    </td>
+    </table>
     <%= hidden_field_tag :subgenre_id, @subgenre_id %>
     <%= hidden_field_tag :question_id, @questions[@i].id %>
     <%= hidden_field_tag :quiz_id, session[:quiz_id] %>
     <%= hidden_field_tag :q_no, @i %>
-    <%= f.submit "submit", class: "btn btn-primary" %>
+    <%= f.submit "submit", class: "btn btn-primary", style: 'margin-left:10%;width:80%' %>
 <% end %>
 <% else %>
-<h1>Access Denied</h1>
+<h1 class ='title' >Access Denied</h1>
 <% end %>  
