--- a/app/views/pages/show_subgenres.html.erb
+++ b/app/views/pages/show_subgenres.html.erb
@@ -1,13 +1,10 @@
 <% if logged_in? %>
-<table>                         
+<% session[:current1] = 0 %>
+<h1 class='title'>Select Subgenre</h1>
     <% @subgenres.each do |subgenre| %>       
-    <tr>
-        <td><%= subgenre.id %></td>  
-        <td><%= link_to subgenre.name, quiz_questions_path(:subgenreId => subgenre.id, :i => 0), data: { confirm: 'Start the quiz' } %></td>  
-    </tr>
+        <div class='link_box'><%= link_to subgenre.name, quiz_questions_path(:subgenreId => subgenre.id, :i => 0), data: { confirm: 'Start the quiz' }, class:'links' %></div>  
 
     <% end %>
-</table>     
 <% else %>
-<h1>Access Denied</h1>
+<h1 class='title' >Access Denied</h1>
 <% end %>      
