--- a/app/views/pages/start_quiz.html.erb
+++ b/app/views/pages/start_quiz.html.erb
@@ -1,13 +1,8 @@
 <% if logged_in? %>
-        <table>                         
+    <h1 class='title'>Select Genre</h1>
             <% @genres.each do |genre| %>       
-            <tr>
-                <td><%= genre.id %></td>  
-                <td><%= link_to genre.name, select_subgenre_path(:genreId => genre.id) %></td>  
-            </tr>
-
+                <div class='link_box' ><%= link_to genre.name, select_subgenre_path(:genreId => genre.id), class: 'links' %></div>  
             <% end %>
-        </table>
 <% else %>
-    <h1>Access Denied</h1>
+    <h1 class='title'>Access Denied</h1>
 <% end %>                   
