--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class='main'>
 
 <p>
   <strong>Text:</strong>
@@ -38,3 +39,4 @@
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
+</div>
