--- a/app/views/subgenres/show.html.erb
+++ b/app/views/subgenres/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class='main'>
 
 <p>
   <strong>Name:</strong>
@@ -9,3 +10,4 @@
 
 <%= link_to 'Edit', edit_subgenre_path(@subgenre) %> |
 <%= link_to 'Back', subgenres_path %>
+</div>
