--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
 
+<p id="notice"><%= notice %></p>
+<div class='main'>
 <h1>Users</h1>
 
 <table>
@@ -30,3 +31,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+</div>
