--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
+
 <p id="notice"><%= notice %></p>
+<div class='main'>
 
 <p>
   <strong>Name:</strong>
@@ -18,3 +20,4 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</div>
